--- a/cart feuilles d'oignon.html
+++ b/cart feuilles d'oignon.html
@@ -107,7 +107,7 @@
       <table>
         <tr>
           <th>produit</th>
-          <th>quantité</th>
+          <th>notre contact</th>
           <th>sous-total</th>
         </tr>
         <tr>
@@ -116,14 +116,14 @@
               <img src="./images/detaille feuilles d'oignon (1).png" alt="" />
               <div>
                 <p>feuilles d'oignon (en bouteille)</p>
-                <span>Price: 500.00 fcfa/sachet</span>
+                <span>Price: commander</span>
                 <br />
                 <a href="feuilles d'oignon.html">remove</a>
               </div>
             </div>
           </td>
-          <td><input type="number" class="" value="1" min="1" /></td>
-          <td>500.00 fcfa/sachet</td>
+          <td>+225 0787275329</td>
+          <td>commander</td>
         </tr>
       </table>
 
@@ -131,14 +131,14 @@
         <table>
           <tr>
             <td>sous-total</td>
-            <td>500 fcfa/sachet</td>
+            <td>par commande</td>
           </tr>
           <tr>
             <td>Total</td>
-            <td>500 fcfa/sachet</td>
+            <td>par commande</td>
           </tr>
         </table>
-        <a href="index.html" class="checkout btn">Passer à la caisse</a>
+        <a href="index.html" class="checkout btn">Commander</a>
       </div>
     </div>
 
