--- a/feuilles d'oignon.html
+++ b/feuilles d'oignon.html
@@ -131,23 +131,21 @@
       <div class="right">
         <span>Domicile/feuilles d'oignon (en bouteille)</span>
         <h1>feuilles d'oignon (en bouteille)</h1>
-        <div class="price">500 fcfa/sachet</div>
+        <div class="price">par commande</div>
         <form>
           <div>
             <select>
               <option value="Select Size" selected disabled>
-                sélectionner le format
+                numéros à contacter
               </option>
-              <option value="1">petit</option>
-              <option value="2">moyen</option>
-              <option value="3">grand</option>
+              <option value="1">+225 0787275329</option>
             </select>
             <span><i class="fas fa-chevron-down"></i></span>
           </div>
         </form>
 
         <form class="form">
-          <a href="cart feuilles d'oignon.html" class="addCart">Ajouter au panier</a>
+          <a href="cart pavet.html" class="addCart">Commander</a>
         </form>
         <h3>DÉTAIL DU PRODUIT</h3>
         <p>
