--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@
         <div class="bottom">
           <a href="">feuilles d'oignon (en bouteille)</a>
           <div class="price">
-            <span>500 fcfa/sachet</span>
-            <span class="cancel">600 fcfa/sachet</span>
+            <span>commander</span>
+            <span class="cancel">indisponible</span>
           </div>
         </div>
       </div>
