--- a/cache nez.html
+++ b/cache nez.html
@@ -129,8 +129,8 @@
         </div>
       </div>
       <div class="right">
-        <span>Domicile/Petits Cache-Nez (enfants)</span>
-        <h1>Petits Cache-Nez (enfants)</h1>
+        <span>Domicile/Petits Cache-Nez (élève)</span>
+        <h1>Petits Cache-Nez (élève)</h1>
         <div class="price">800 fcfa</div>
         <form>
           <div>
