--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Petits Cache-Nez (enfants)</a>
+          <a href="">Petits Cache-Nez (élève)</a>
           <div class="price">
             <span>800 fcfa</span>
             <span class="cancel">1000 fcfa</span>
