--- a/cart oeufs africains.html
+++ b/cart oeufs africains.html
@@ -113,17 +113,17 @@
         <tr>
           <td>
             <div class="cart-info">
-              <img src="./images/oeufs africain.png" alt="" />
+              <img src="./images/DEMI paquette.png" alt="" />
               <div>
                 <p>Oeufs Africains</p>
-                <span>Price: 150.00 fcfa</span>
+                <span>Price: 150.00 fcfa/oeuf</span>
                 <br />
                 <a href="oeufs africain.html">remove</a>
               </div>
             </div>
           </td>
           <td><input type="number" class="" value="1" min="1" /></td>
-          <td>150.00 fcfa</td>
+          <td>150.00 fcfa/oeuf</td>
         </tr>
       </table>
 
@@ -131,11 +131,11 @@
         <table>
           <tr>
             <td>sous-total</td>
-            <td>150 fcfa</td>
+            <td>150 fcfa/oeuf</td>
           </tr>
           <tr>
             <td>Total</td>
-            <td>150 fcfa</td>
+            <td>150 fcfa/oeuf</td>
           </tr>
         </table>
         <a href="index.html" class="checkout btn">Passer à la caisse</a>
