--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
       <div class="product">
         <div class="img-container">
-          <img src="./images/oeufs africain.jpg" alt="" />
+          <img src="./images/DEMI paquette.jpg" alt="" />
           <div class="addCart">
             <a href="oeufs africain .html"><i class="fas fa-shopping-cart"></i></a>
           </div>
@@ -262,8 +262,8 @@
         <div class="bottom">
           <a href="">Oeufs Africain</a>
           <div class="price">
-            <span>150 fcfa</span>
-            <span class="cancel">200 fcfa</span>
+            <span>150 fcfa/oeuf</span>
+            <span class="cancel">200 fcfa/oeuf</span>
           </div>
         </div>
       </div>
@@ -446,7 +446,7 @@
         </div>
         <div class="footer-center">
           <h3>MON COMPTE</h3>
-          <a href="#">MON COMPTE</a>
+          <a href="#">Disponible sur jumia</a>
           <a href="#">Historique des commandes</a>
           <a href="liste des souhaits.html">Liste de souhaits</a>
           <a href="#">Bulletin</a>
