--- a/plaquette d'oeufs.html
+++ b/plaquette d'oeufs.html
@@ -118,17 +118,17 @@
             <a href="douzene d'oeufs 2.html"><img src="./images/douzene d'oeufs 2.png" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <a href="demi plaquette.html"><img src="./images/DEMI paquette.png" alt="" /></a>
+            <a href="demi plaquette.html"><img src="./images/oeufs africain.png" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <a href="oeufs africain .html"><img src="./images/oeufs africain.png" alt="" /></a>
+            <a href="oeufs africain .html"><img src="./images/DEMI paquette.png" alt="" /></a>
           </div>
         </div>
       </div>
       <div class="right">
         <span>Domicile/Oeufs Africains</span>
         <h1>Oeufs Africains</h1>
-        <div class="price">150 fcfa</div>
+        <div class="price">150 fcfa/oeuf</div>
         <form>
           <div>
             <select>
