--- a/demi douzene oeufs.html
+++ b/demi douzene oeufs.html
@@ -109,7 +109,7 @@
         </div>
         <div class="thumbnails">
           <div class="thumbnail">
-            <a href="oeufs africain .html"><img src="./images/oeufs africain.png" alt="" /></a>
+            <a href="oeufs africain .html"><img src="./images/DEMI paquette.png" alt="" /></a>
           </div>
           <div class="thumbnail">
             <a href="douzene d'oeufs 1.html"><img src="./images/douzene d'oeufs 1.png" alt="" /></a>
@@ -118,7 +118,7 @@
             <a href="douzene d'oeufs 2.html"><img src="./images/douzene d'oeufs 2.png" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <a href="demi plaquette.html"><img src="./images/DEMI paquette.png" alt="" /></a>
+            <a href="demi plaquette.html"><img src="./images/oeufs africain.png" alt="" /></a>
           </div>
           <div class="thumbnail">
             <a href="plaquette d'oeufs.html"><img src="./images/plaquette d'oeufs 1.png" alt="" /></a>
@@ -128,7 +128,7 @@
       <div class="right">
         <span>Domicile/Oeufs Africains</span>
         <h1>Oeufs Africains</h1>
-        <div class="price">150 fcfa</div>
+        <div class="price">150 fcfa/oeuf</div>
         <form>
           <div>
             <select>
