--- a/cart cache nez.html
+++ b/cart cache nez.html
@@ -115,7 +115,7 @@
             <div class="cart-info">
               <img src="./images/cache nez.png" alt="" />
               <div>
-                <p>Petits Cache-Nez (élève)</p>
+                <p>Petit Cache-Nez (élève)</p>
                 <span>Price: 800.00 fcfa</span>
                 <br />
                 <a href="cache nez.html">remove</a>
