--- a/products.html
+++ b/products.html
@@ -477,6 +477,26 @@
           </div>
           <div class="product">
             <div class="img-container">
+              <img src="./images/trousse.jpg" alt="" />
+              <div class="addCart">
+                <a href="trousse 2.html"><i class="fas fa-shopping-cart"></i></a>
+              </div>
+    
+              <ul class="side-icons">
+                <span><i class="fas fa-search"></i></span>
+                <span><i class="far fa-heart"></i></span>
+                <span><i class="fas fa-sliders-h"></i></span>
+              </ul>
+            </div>
+            <div class="bottom">
+              <a href="">Grande Trousse-Récyclable</a>
+              <div class="price">
+                <span>700 fcfa</span>
+              </div>
+            </div>
+          </div>
+          <div class="product">
+            <div class="img-container">
               <img src="./images/product6.jpg" alt="" />
               <div class="addCart">
                 <i class="fas fa-shopping-cart"></i>
@@ -518,26 +538,6 @@
           <div class="product">
             <div class="img-container">
               <img src="./images/product4.jpg" alt="" />
-              <div class="addCart">
-                <i class="fas fa-shopping-cart"></i>
-              </div>
-
-              <ul class="side-icons">
-                <span><i class="fas fa-search"></i></span>
-                <span><i class="far fa-heart"></i></span>
-                <span><i class="fas fa-sliders-h"></i></span>
-              </ul>
-            </div>
-            <div class="bottom">
-              <a href="">Bambi Print Mini Backpack</a>
-              <div class="price">
-                <span>$150</span>
-              </div>
-            </div>
-          </div>
-          <div class="product">
-            <div class="img-container">
-              <img src="./images/product7.jpg" alt="" />
               <div class="addCart">
                 <i class="fas fa-shopping-cart"></i>
               </div>
