--- a/cart trousse 2.html
+++ b/cart trousse 2.html
@@ -115,15 +115,15 @@
             <div class="cart-info">
               <img src="./images/trousse.png" alt="" />
               <div>
-                <p>Petite Trousse-Récyclable</p>
-                <span>Price: 500.00 fcfa</span>
+                <p>Grande Trousse-Récyclable</p>
+                <span>Price: 700.00 fcfa</span>
                 <br />
                 <a href="trousse.html">remove</a>
               </div>
             </div>
           </td>
           <td><input type="number" class="" value="1" min="1" /></td>
-          <td>500.00 fcfa</td>
+          <td>700.00 fcfa</td>
         </tr>
       </table>
 
@@ -131,11 +131,11 @@
         <table>
           <tr>
             <td>sous-total</td>
-            <td>500 fcfa</td>
+            <td>700 fcfa</td>
           </tr>
           <tr>
             <td>Total</td>
-            <td>500 fcfa</td>
+            <td>700 fcfa</td>
           </tr>
         </table>
         <a href="index.html" class="checkout btn">Passer à la caisse</a>
