--- a/detaille trousse 1.html
+++ b/detaille trousse 1.html
@@ -129,8 +129,8 @@
         </div>
       </div>
       <div class="right">
-        <span>Domicile/Petits Trousse-Récyclable</span>
-        <h1>Petits Trousse-Récyclable</h1>
+        <span>Domicile/Petite Trousse-Récyclable</span>
+        <h1>Petite Trousse-Récyclable</h1>
         <div class="price">500 fcfa</div>
         <form>
           <div>
