--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Petits Trousse-Récyclable</a>
+          <a href="">Petite Trousse-Récyclable</a>
           <div class="price">
             <span>500 fcfa</span>
           </div>
@@ -217,7 +217,7 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Petits Cache-Nez (élève)</a>
+          <a href="">Petit Cache-Nez (élève)</a>
           <div class="price">
             <span>800 fcfa</span>
             <span class="cancel">1000 fcfa</span>
