--- a/trousse 2.html
+++ b/trousse 2.html
@@ -105,13 +105,10 @@
     <div class="details container">
       <div class="left">
         <div class="main">
-          <img src="./images/cache nez.png" alt="" />
+          <img src="./images/trousse.png" alt="" />
         </div>
         <div class="thumbnails">
           <div class="thumbnail">
-            <img src="./images/" alt="" />
-          </div>
-          <div class="thumbnail">
             <a href=""><img src="./images/" alt="" /></a>
           </div>
           <div class="thumbnail">
@@ -119,6 +116,9 @@
           </div>
           <div class="thumbnail">
             <a href=""><img src="./images/" alt="" /></a>
+          </div>
+          <div class="thumbnail">
+            <a href="detaille trousse Grand.html"><img src="./images/detaille trousse.png" alt="" /></a>
           </div>
           <div class="thumbnail">
             <a href=""><img src="./images/" alt="" /></a>
@@ -129,25 +129,24 @@
         </div>
       </div>
       <div class="right">
-        <span>Domicile/Petit Cache-Nez (élève)</span>
-        <h1>Petit Cache-Nez (élève)</h1>
-        <div class="price">800 fcfa</div>
+        <span>Domicile/Grande Trousse-Récyclable</span>
+        <h1>Grande Trousse-Récyclable</h1>
+        <div class="price">700 fcfa</div>
         <form>
           <div>
             <select>
               <option value="Select Size" selected disabled>
-                sélectionner le genre
+                sélectionner la forme
               </option>
-              <option value="1">fille</option>
-              <option value="2">garçon</option>
-
+              <option value="1">mince</option>
+              <option value="2">grosse</option>
             </select>
             <span><i class="fas fa-chevron-down"></i></span>
           </div>
         </form>
 
         <form class="form">
-          <a href="cart cache nez.html" class="addCart">Ajouter au panier</a>
+          <a href="cart trousse.html" class="addCart">Ajouter au panier</a>
         </form>
         <h3>DÉTAIL DU PRODUIT</h3>
         <p>
@@ -169,9 +168,9 @@
     <div class="product-layout container">
       <div class="product">
         <div class="img-container">
-          <img src="./images/trousse.jpg" alt="" />
+          <img src="./images/cache nez.jpg" alt="" />
           <div class="addCart">
-            <a href="trousse.html"><i class="fas fa-shopping-cart"></i></a>
+            <a href="cache nez.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -181,17 +180,40 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Trousse Réciclable</a>
+          <a href="">Cache Nez (fille & garçon)</a>
+          <div class="price">
+            <span>250 fcfa</span>
+            <span class="cancel">500 fcfa</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="product">
+        <div class="img-container">
+          <img src="./images/savon liquide.jpg" alt="" />
+          <div class="addCart">
+            <a href="savon liquide.html"><i class="fas fa-shopping-cart"></i></a>
+          </div>
+
+          <ul class="side-icons">
+            <span><i class="fas fa-search"></i></span>
+            <span><i class="far fa-heart"></i></span>
+            <span><i class="fas fa-sliders-h"></i></span>
+          </ul>
+        </div>
+        <div class="bottom">
+          <a href="">Savon liquide</a>
           <div class="price">
             <span>500 fcfa</span>
           </div>
         </div>
       </div>
+
       <div class="product">
         <div class="img-container">
-          <img src="./images/plante.jpg" alt="" />
+          <img src="./images/oeufs africain.jpg" alt="" />
           <div class="addCart">
-            <a href="plante.html"><i class="fas fa-shopping-cart"></i></a>
+            <a href="oeufs africain.html"><i class="fas fa-shopping-cart"></i></a>
           </div>
 
           <ul class="side-icons">
@@ -201,55 +223,31 @@
           </ul>
         </div>
         <div class="bottom">
-          <a href="">Plante (fleur & potager etc...)</a>
+          <a href="">Oeufs Africain</a>
+          <div class="price">
+            <span>150 fcfa</span>
+            <span class="cancel">200 fcfa</span>
+          </div>
+        </div>
+      </div>
 
+      <div class="product">
+        <div class="img-container">
+          <img src="./images/pavet.jpg" alt="" />
+          <div class="addCart">
+            <a href="pavet.html"><i class="fas fa-shopping-cart"></i></a>
+          </div>
+
+          <ul class="side-icons">
+            <span><i class="fas fa-search"></i></span>
+            <span><i class="far fa-heart"></i></span>
+            <span><i class="fas fa-sliders-h"></i></span>
+          </ul>
+        </div>
+        <div class="bottom">
+          <a href="">Pavet Reciclable</a>
           <div class="price">
             <span>5000 fcfa/km°2</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="product">
-        <div class="img-container">
-          <img src="./images/aracchide.jpg" alt="" />
-          <div class="addCart">
-            <a href="arachide.html"><i class="fas fa-shopping-cart"></i></a>
-          </div>
-
-          <ul class="side-icons">
-            <span><i class="fas fa-search"></i></span>
-            <span><i class="far fa-heart"></i></span>
-            <span><i class="fas fa-sliders-h"></i></span>
-          </ul>
-        </div>
-        <div class="bottom">
-          <a href="">Arachide</a>
-
-          <div class="price">
-            <span>100 fcfa/sachet</span>
-            <span class="cancel">200 fcfa/sachet</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="product">
-        <div class="img-container">
-          <img src="./images/feuilles d'oignon.jpg" alt="" />
-          <div class="addCart">
-            <a href="feuilles d'oignon.html"><i class="fas fa-shopping-cart"></i></a>
-          </div>
-
-          <ul class="side-icons">
-            <span><i class="fas fa-search"></i></span>
-            <span><i class="far fa-heart"></i></span>
-            <span><i class="fas fa-sliders-h"></i></span>
-          </ul>
-        </div>
-        <div class="bottom">
-          <a href="">feuilles d'oignon</a>
-          <div class="price">
-            <span>500 fcfa/kilko</span>
-            <span class="cancel">600 fcfa/kilo</span>
           </div>
         </div>
       </div>
