--- a/cart trousse 2.html
+++ b/cart trousse 2.html
@@ -118,7 +118,7 @@
                 <p>Grande Trousse-Récyclable</p>
                 <span>Price: 700.00 fcfa</span>
                 <br />
-                <a href="trousse.html">remove</a>
+                <a href="trousse 2.html">remove</a>
               </div>
             </div>
           </td>
