--- a/trousse 2.html
+++ b/trousse 2.html
@@ -146,7 +146,7 @@
         </form>
 
         <form class="form">
-          <a href="cart trousse.html" class="addCart">Ajouter au panier</a>
+          <a href="cart trousse 2.html" class="addCart">Ajouter au panier</a>
         </form>
         <h3>DÉTAIL DU PRODUIT</h3>
         <p>
