--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <img src="./images/shoppingBag.svg" alt="" aria-selected="true" />
             <small class="count d-flex">0</small>
           </span>
-          <span><img src="./images/search.svg" alt="" /></span>
+          <span><a href="products 2.html"><img src="./images/search.svg" alt="" /></a></span>
         </li>
       </ul>
       <label for="" class="btn open-btn"><i class="fas fa-bars"></i></label>
@@ -114,9 +114,7 @@
       <img src="./images/eleve devant ordi.png" alt="" />
     </div>
   </div>
-
   <!-- Promotion -->
-
   <section class="section promotion">
     <div class="title">
       <h2>Boutique Collections</h2>
