--- a/promation.html
+++ b/promation.html
@@ -117,7 +117,7 @@
   <!-- Products -->
   <section class="section products">
     <div class="title">
-      <h2>Nouveaux produits</h2>
+      <h2>Promotions</h2>
       <span>Choisissez parmi le produit premium et économisez beaucoup d'argent</span>
     </div>
 
