--- a/index.html
+++ b/index.html
@@ -356,6 +356,11 @@
     </div>
   </section>
 
+  <!-- video presentation-->
+  <div class="video">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/YRjXU_J1udo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+
   <!-- ADVERT -->
   <section class="section advert">
     <div class="advert-layout container">
