--- a/index.html
+++ b/index.html
@@ -434,10 +434,17 @@
         <div class="footer-center">
           <h3>SUPPLÉMENTS</h3>
           <a href="partenaire.html">les partenaires</a>
-          <a href="#">Certificats-cadeaux</a>
-          <a href="#">Affilier</a>
           <a href="promation.html">Promotions</a>
           <a href="#">Plan du site</a>
+          <p>Visible sur:</p>
+          <div class="social-média">
+            <p>
+              <a href="https://www.facebook.com/Jelmpbshop-OKTAY-100328895567186"><p> <i class="fab fa-facebook-f"></i></p></a>
+              <a href="https://www.instagram.com/jelmpbshop/"><p><i class="fab fa-instagram"></i></p></a>
+              <a href="#"><p><i class="fab fa-youtube"></i></p></a>
+              <a href="#"><p><i class="fab fa-twitter"></i></p></a>
+            </p>
+          </div>
         </div>
         <div class="footer-center">
           <h3>INFORMATION</h3>
@@ -473,7 +480,7 @@
             <span>
               <i class="fas fa-phone"></i>
             </span>
-            <a href="http://jelmpbschop.e-monsite.com/contact/contact.html">+225 0787275329</a>
+            <a href="http://jelmpbschop.e-monsite.com/contact/contact.html">&target;+225 0787275329</a>
             +225 0779922529
           </div>
           <div class="payment-methods">
@@ -482,6 +489,7 @@
         </div>
       </div>
     </div>
+    <p>&copy;2021 jelmpb-shop</p>
   </footer>
   <!-- End Footer -->
 
