--- a/partenaire.html
+++ b/partenaire.html
@@ -115,6 +115,11 @@
     </div>
   </div>
 
+  <!-- video presentation-->
+  <div class="video">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/YRjXU_J1udo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+  
   <!-- BRANDS -->
   <section class="section brands">
     <div class="title">
@@ -163,11 +168,18 @@
       <div class="footer-container">
         <div class="footer-center">
           <h3>SUPPLÉMENTS</h3>
-          <a href="#">les partenaires</a>
-          <a href="#">Certificats-cadeaux</a>
-          <a href="#">Affilier</a>
-          <a href="#">Promotions</a>
+          <a href="partenaire.html">les partenaires</a>
+          <a href="promation.html">Promotions</a>
           <a href="#">Plan du site</a>
+          <p>Visible sur:</p>
+          <div class="social-média">
+            <p>
+              <a href="https://www.facebook.com/Jelmpbshop-OKTAY-100328895567186"><p> <i class="fab fa-facebook-f"></i></p></a>
+              <a href="https://www.instagram.com/jelmpbshop/"><p><i class="fab fa-instagram"></i></p></a>
+              <a href="#"><p><i class="fab fa-youtube"></i></p></a>
+              <a href="#"><p><i class="fab fa-twitter"></i></p></a>
+            </p>
+          </div>
         </div>
         <div class="footer-center">
           <h3>INFORMATION</h3>
@@ -179,14 +191,14 @@
         </div>
         <div class="footer-center">
           <h3>MON COMPTE</h3>
-          <a href="#">MON COMPTE</a>
+          <a href="#">Disponible sur jumia</a>
           <a href="#">Historique des commandes</a>
-          <a href="#">Liste de souhaits</a>
+          <a href="liste des souhaits.html">Liste de souhaits</a>
           <a href="#">Bulletin</a>
-          <a href="#">Retour</a>
+          <a href="index.html">Retour</a>
         </div>
         <div class="footer-center">
-          <a href="http://jelmpbschop.e-monsite.com/contact/contact.html"><h3>CONTACTER-NOUS</h3></a>
+          <h3>CONTACTER-NOUS</h3>
           <div>
             <span>
               <i class="fas fa-map-marker-alt"></i>
@@ -197,13 +209,13 @@
             <span>
               <i class="far fa-envelope"></i>
             </span>
-            <a href="">JELMPB-Shop@gmail.com</a>
+            <a href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">Nous écris par email: </a>schoolphoenix225@gmail.com
           </div>
           <div>
             <span>
               <i class="fas fa-phone"></i>
             </span>
-            <a href="http://jelmpbschop.e-monsite.com/contact/contact.html">+225 0787275329</a>
+            <a href="http://jelmpbschop.e-monsite.com/contact/contact.html">&target;+225 0787275329</a>
             +225 0779922529
           </div>
           <div class="payment-methods">
@@ -212,7 +224,7 @@
         </div>
       </div>
     </div>
-    </div>
+    <p>&copy;2021 jelmpb-shop</p>
   </footer>
   <!-- End Footer -->
 
