--- a/cart trousse 2.html
+++ b/cart trousse 2.html
@@ -141,63 +141,59 @@
         <a href="index.html" class="checkout btn">Passer à la caisse</a>
       </div>
     </div>
-
-     <!-- Footer -->
-     <footer id="footer" class="section footer">
-      <div class="container">
-        <div class="footer-container">
-          <div class="footer-center">
-            <h3>SUPPLÉMENTS</h3>
-            <a href="#">les partenaires</a>
-            <a href="#">Certificats-cadeaux</a>
-            <a href="#">Affilier</a>
-            <a href="#">Promotions</a>
-            <a href="#">Plan du site</a>
+    
+  <!-- Footer -->
+  <footer id="footer" class="section footer">
+    <div class="container">
+      <div class="footer-container">
+        <div class="footer-center">
+          <h3>SUPPLÉMENTS</h3>
+          <a href="partenaire.html">les partenaires</a>
+          <a href="promation.html">Promotions</a>
+          <a href="#">Plan du site</a>
+          <p>Visible sur:</p>
+          <div class="social-média">
+            <p>
+              <a href="https://www.facebook.com/Jelmpbshop-OKTAY-100328895567186"><p> <i class="fab fa-facebook-f"></i></p></a>
+              <a href="https://www.instagram.com/jelmpbshop/"><p><i class="fab fa-instagram"></i></p></a>
+              <a href="#"><p><i class="fab fa-youtube"></i></p></a>
+              <a href="#"><p><i class="fab fa-twitter"></i></p></a>
+            </p>
           </div>
-          <div class="footer-center">
-            <h3>INFORMATION</h3>
-            <a href="#">À propos de nous</a>
-            <a href="#">Politique de confidentialité</a>
-            <a href="#">termes et conditions</a>
-            <a href="#">Nous contacter</a>
-            <a href="#">Plan du site</a>
+        </div>
+        <div class="footer-center">
+          <h3>INFORMATION</h3>
+          <a href="apropos et detailles.html">À propos de nous</a>
+          <a href="#">Politique de confidentialité</a>
+          <a href="#">termes et conditions</a>
+          <a href="http://jelmpbschop.e-monsite.com/contact/contact.html">Nous contacter</a>
+        </div>
+        <div class="footer-center">
+          <h3>MON COMPTE</h3>
+          <a href="#">jelmpb-shop sur jumia</a>
+          <a href="#">Historique des commandes</a>
+          <a href="liste des souhaits.html">Liste de souhaits</a>
+          <a href="index.html">Retourner à l'Accueil</a>
+        </div>
+        <div class="footer-center">
+          <h3>CONTACTER-NOUS</h3>
+          <div>
+            <a href="https://www.google.com/maps/place/Lyc%C3%A9e+Moderne+de+Port+Bouet/@5.2550168,-3.960339,17z/data=!3m1!4b1!4m5!3m4!1s0xfc1ef1d4375d901:0xbaaea4fef887409d!8m2!3d5.2550108!4d-3.9581466"><i class="fas fa-map-marker-alt " >-Lycée moderne de port bouet</i></a>
           </div>
-          <div class="footer-center">
-            <h3>MON COMPTE</h3>
-            <a href="#">MON COMPTE</a>
-            <a href="#">Historique des commandes</a>
-            <a href="#">Liste de souhaits</a>
-            <a href="#">Bulletin</a>
-            <a href="#">Retour</a>
+          <div>
+            <a href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin"><i class="far fa-envelope">-em@il: schoolphoenix225@gmail.com</i></a>
           </div>
-          <div class="footer-center">
-            <h3>CONTACTER-NOUS</h3>
-            <div>
-              <span>
-                <i class="fas fa-map-marker-alt"></i>
-              </span>
-              JELMPB, 724R+2P Abidjan, COTE D'IVOIRE
-            </div>
-            <div>
-              <span>
-                <i class="far fa-envelope"></i>
-              </span>
-              JELMPB-Shop@gmail.com
-            </div>
-            <div>
-              <span>
-                <i class="fas fa-phone"></i>
-              </span>
-              +225 bla bla bla
-            </div>
-            <div class="payment-methods">
-              <img src="./images/payment.png" alt="">
-            </div>
+          <div>
+            <a href="http://jelmpbschop.e-monsite.com/contact/contact.html"><i class="fas fa-phone">+225 0787275329</i></a>
+          </div>
+          <div class="payment-methods">
+            <img src="./images/payment.png" alt="">
           </div>
         </div>
       </div>
-      </div>
-    </footer>
+    </div>
+    <p>&copy;2021 jelmpb-shop</p>
+  </footer>
   <!-- End Footer -->
 
     <!-- Custom Scripts -->
