--- a/partenaire.html
+++ b/partenaire.html
@@ -187,36 +187,24 @@
           <a href="#">Politique de confidentialité</a>
           <a href="#">termes et conditions</a>
           <a href="http://jelmpbschop.e-monsite.com/contact/contact.html">Nous contacter</a>
-          <a href="#">Plan du site</a>
         </div>
         <div class="footer-center">
           <h3>MON COMPTE</h3>
-          <a href="#">Disponible sur jumia</a>
+          <a href="#">jelmpb-shop sur jumia</a>
           <a href="#">Historique des commandes</a>
           <a href="liste des souhaits.html">Liste de souhaits</a>
-          <a href="#">Bulletin</a>
-          <a href="index.html">Retour</a>
+          <a href="index.html">Retourner à l'Accueil</a>
         </div>
         <div class="footer-center">
           <h3>CONTACTER-NOUS</h3>
           <div>
-            <span>
-              <i class="fas fa-map-marker-alt"></i>
-            </span>
-            <a href="https://www.google.com/maps/place/Lyc%C3%A9e+Moderne+de+Port+Bouet/@5.2550168,-3.960339,17z/data=!3m1!4b1!4m5!3m4!1s0xfc1ef1d4375d901:0xbaaea4fef887409d!8m2!3d5.2550108!4d-3.9581466">lycée moderne de port bouet</a>
+            <a href="https://www.google.com/maps/place/Lyc%C3%A9e+Moderne+de+Port+Bouet/@5.2550168,-3.960339,17z/data=!3m1!4b1!4m5!3m4!1s0xfc1ef1d4375d901:0xbaaea4fef887409d!8m2!3d5.2550108!4d-3.9581466"><i class="fas fa-map-marker-alt " >-Lycée moderne de port bouet</i></a>
           </div>
           <div>
-            <span>
-              <i class="far fa-envelope"></i>
-            </span>
-            <a href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">Nous écris par email: </a>schoolphoenix225@gmail.com
+            <a href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin"><i class="far fa-envelope">-em@il: schoolphoenix225@gmail.com</i></a>
           </div>
           <div>
-            <span>
-              <i class="fas fa-phone"></i>
-            </span>
-            <a href="http://jelmpbschop.e-monsite.com/contact/contact.html">&target;+225 0787275329</a>
-            +225 0779922529
+            <a href="http://jelmpbschop.e-monsite.com/contact/contact.html"><i class="fas fa-phone">+225 0787275329</i></a>
           </div>
           <div class="payment-methods">
             <img src="./images/payment.png" alt="">
