--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <span>Ventes exclusives</span>
       <h1> BIENVENUE !<br>DANS VOTRE BOUTIQUE,<br>VOTRE CHEZ VOUS</h1>
       <small>Recevez toutes les offres exclusives de la saison</small>
-      <a href="products.html">Voir la collection </a>
+      <a href="products.html">Voir</a>
     </div>
     <div class="right">
       <img src="./images/eleve devant ordi.png" alt="" />
