--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
 
   <div class="hero">
     <div class="left">
-      <span>Ventes exclusives</span>
+      <span>Ventes exclusives <a href="products.html">Voir la collection</a></span>
       <h1> BIENVENUE !<br>DANS VOTRE BOUTIQUE,<br>VOTRE CHEZ VOUS</h1>
       <small>Recevez toutes les offres exclusives de la saison</small>
-      <a href="products.html">Voir</a>
     </div>
     <div class="right">
       <img src="./images/eleve devant ordi.png" alt="" />
     </div>
+    
   </div>
   <!-- Promotion -->
   <section class="section promotion">
