--- a/cache nez 2.html
+++ b/cache nez 2.html
@@ -130,7 +130,7 @@
       </div>
       <div class="right">
         <span>Domicile/Grand Cache-Nez (aldutes)</span>
-        <h1>Grand Cache-Nez (aldutes)</h1>
+        <h1>Grand Cache-Nez (adultes)</h1>
         <div class="price">1000 fcfa</div>
         <form>
           <div>
