--- a/cart cache nez 2.html
+++ b/cart cache nez 2.html
@@ -115,7 +115,7 @@
             <div class="cart-info">
               <img src="./images/cache nez.png" alt="" />
               <div>
-                <p>Grand Cache-Nez (aldutes)</p>
+                <p>Grand Cache-Nez (adultes)</p>
                 <span>Price: 1000 fcfa</span>
                 <br />
                 <a href="cache nez 2.html">remove</a>
