--- a/products.html
+++ b/products.html
@@ -428,7 +428,7 @@
               </ul>
             </div>
             <div class="bottom">
-              <a href="">Grand Cache-Nez (aldutes)</a>
+              <a href="">Grand Cache-Nez (adultes)</a>
               <div class="price">
                 <span>1000 fcfa</span>
                 <span class="cancel">1500 fcfa</span>
