--- a/trousse 2.html
+++ b/trousse 2.html
@@ -136,10 +136,15 @@
           <div>
             <select>
               <option value="Select Size" selected disabled>
-                sélectionner la forme
+                sélectionner la couleur
               </option>
-              <option value="1">mince</option>
-              <option value="2">grosse</option>
+              <option value="1">orange blanc vert</option>
+              <option value="2">bleu rose</option>
+              <option value="2">vert bleu</option>
+              <option value="2">rose blanc</option>
+              <option value="2">jaune</option>
+              <option value="2">bleu blanc</option>
+              <option value="2">rose jaune</option>
             </select>
             <span><i class="fas fa-chevron-down"></i></span>
           </div>
