--- a/detaille trousse Grand.html
+++ b/detaille trousse Grand.html
@@ -109,19 +109,19 @@
         </div>
         <div class="thumbnails">
           <div class="thumbnail">
-            <a href=""><img src="./images/" alt="" /></a>
-          </div>
-          <div class="thumbnail">
-            <a href=""><img src="./images/" alt="" /></a>
-          </div>
-          <div class="thumbnail">
-            <a href=""><img src="./images/" alt="" /></a>
-          </div>
-          <div class="thumbnail">
             <a href="trousse 2.html"><img src="./images/trousse.png" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <a href=""><img src="./images/" alt="" /></a>
+            <a href="detaille trousse couleur 1 G.html"><img src="./images/detaille trousse couleur 1.png" alt="" /></a>
+          </div>
+          <div class="thumbnail">
+            <a href="detaille trousse couleur 1 idem G.html"><img src="./images/detaille trousse couleur 1 idem.png" alt="" /></a>
+          </div>
+          <div class="thumbnail">
+            <a href="detaille trousse couleur 2 G.html"><img src="./images/detaille trousse couleur 2.png" alt="" /></a>
+          </div>
+          <div class="thumbnail">
+            <a href="detaille trousse couleur 5 G.html"><img src="./images/detaille trousse couleur 5.png" alt="" /></a>
           </div>
           <div class="thumbnail">
             <a href=""><img src="./images/" alt="" /></a>
