--- a/detaille trousse couleur 2.html
+++ b/detaille trousse couleur 2.html
@@ -105,7 +105,7 @@
     <div class="details container">
       <div class="left">
         <div class="main">
-          <img src="./images/trousse.png" alt="" />
+          <img src="./images/detaille trousse couleur 2.png" alt="" />
         </div>
         <div class="thumbnails">
           <div class="thumbnail">
@@ -118,7 +118,7 @@
             <a href="detaille trousse couleur 1 idem.html"><img src="./images/detaille trousse couleur 1 idem.png" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <a href="detaille trousse couleur 2.html"><img src="./images/detaille trousse couleur 2.png" alt="" /></a>
+            <a href="trousse.html"><img src="./images/trousse.png" alt="" /></a>
           </div>
           <div class="thumbnail">
             <a href="detaille trousse couleur 5.html"><img src="./images/detaille trousse couleur 5.png" alt="" /></a>
