--- a/detaille trousse 1.html
+++ b/detaille trousse 1.html
@@ -112,16 +112,16 @@
             <a href="trousse.html"><img src="./images/trousse.png" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <a href=""><img src="./images/" alt="" /></a>
+            <a href="detaille trousse couleur 1.html"><img src="./images/detaille trousse couleur 1.png" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <a href=""><img src="./images/" alt="" /></a>
+            <a href="detaille trousse couleur 1 idem.html"><img src="./images/detaille trousse couleur 1 idem.png" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <a href=""><img src="./images/" alt="" /></a>
+            <a href="detaille trousse couleur 2.html"><img src="./images/detaille trousse couleur 2.png" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <a href=""><img src="./images/" alt="" /></a>
+            <a href="detaille trousse couleur 5.html"><img src="./images/detaille trousse couleur 5.png" alt="" /></a>
           </div>
           <div class="thumbnail">
             <a href=""><img src="./images/" alt="" /></a>
