--- a/detaille trousse couleur 1 idem G.html
+++ b/detaille trousse couleur 1 idem G.html
@@ -105,23 +105,23 @@
     <div class="details container">
       <div class="left">
         <div class="main">
-          <img src="./images/trousse.png" alt="" />
+          <img src="./images/detaille trousse couleur 1 idem.png" alt="" />
         </div>
         <div class="thumbnails">
           <div class="thumbnail">
-            <a href="detaille trousse 1.html"><img src="./images/detaille trousse.png" alt="" /></a>
+            <a href="detaille trousse Grand.html"><img src="./images/detaille trousse.png" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <a href="detaille trousse couleur 1.html"><img src="./images/detaille trousse couleur 1.png" alt="" /></a>
+            <a href="detaille trousse couleur 1 G.html"><img src="./images/detaille trousse couleur 1.png" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <a href="detaille trousse couleur 1 idem.html"><img src="./images/detaille trousse couleur 1 idem.png" alt="" /></a>
+            <a href="trousse 2.html"><img src="./images/trousse.png" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <a href="detaille trousse couleur 2.html"><img src="./images/detaille trousse couleur 2.png" alt="" /></a>
+            <a href="detaille trousse couleur 2 G.html"><img src="./images/detaille trousse couleur 2.png" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <a href="detaille trousse couleur 5.html"><img src="./images/detaille trousse couleur 5.png" alt="" /></a>
+            <a href="detaille trousse couleur 5 G.html"><img src="./images/detaille trousse couleur 5.png" alt="" /></a>
           </div>
           <div class="thumbnail">
             <a href=""><img src="./images/" alt="" /></a>
@@ -129,9 +129,9 @@
         </div>
       </div>
       <div class="right">
-        <span>Domicile/Petite Trousse-Récyclable</span>
-        <h1>Petite Trousse-Récyclable</h1>
-        <div class="price">500 fcfa</div>
+        <span>Domicile/Grande Trousse-Récyclable</span>
+        <h1>Grande Trousse-Récyclable</h1>
+        <div class="price">700 fcfa</div>
         <form>
           <div>
             <select>
