--- a/detaille trousse couleur 1.html
+++ b/detaille trousse couleur 1.html
@@ -105,14 +105,14 @@
     <div class="details container">
       <div class="left">
         <div class="main">
-          <img src="./images/trousse.png" alt="" />
+          <img src="./images/detaille trousse couleur 1.png" alt="" />
         </div>
         <div class="thumbnails">
           <div class="thumbnail">
             <a href="detaille trousse 1.html"><img src="./images/detaille trousse.png" alt="" /></a>
           </div>
           <div class="thumbnail">
-            <a href="detaille trousse couleur 1.html"><img src="./images/detaille trousse couleur 1.png" alt="" /></a>
+            <a href="trousse.html"><img src="./images/trousse.png" alt="" /></a>
           </div>
           <div class="thumbnail">
             <a href="detaille trousse couleur 1 idem.html"><img src="./images/detaille trousse couleur 1 idem.png" alt="" /></a>
