--- a/plante.html
+++ b/plante.html
@@ -109,7 +109,7 @@
         </div>
         <div class="thumbnails">
           <div class="thumbnail">
-            <a href="detaille plante 1 .html"><img src="./images/detaille plante.png" alt="" /></a>
+            <a href="detaille plante 1 .html"><img src="./images/" alt="" /></a>
           </div>
           <div class="thumbnail">
             <a href=""><img src="./images/" alt="" /></a>
