--- a/detaille plante 1 .html
+++ b/detaille plante 1 .html
@@ -109,7 +109,7 @@
         </div>
         <div class="thumbnails">
           <div class="thumbnail">
-            <a href="plante.html"><img src="./images/plante.png" alt="" /></a>
+            <a href="plante.html"><img src="./images/feuilles de moringa (seché en poudre).png" alt="" /></a>
           </div>
           <div class="thumbnail">
             <a href=""><img src="./images/" alt="" /></a>
