--- a/index.html
+++ b/index.html
@@ -439,10 +439,10 @@
           <p>Visible sur:</p>
           <div class="social-média">
             <p>
-              <a href="https://www.facebook.com/Jelmpbshop-OKTAY-100328895567186"><p> <i class="fab fa-facebook-f"></i></p></a>
+              <a href="https://www.facebook.com/Jelmpbshop-OKTAY-100328895567186"><p><i class="fab fa-facebook-f"></i></p></a>
+              <a href="https://wa.me/+225-0787275329"><p><i class="fab fa-whatsapp"></i></i></p></a>
               <a href="https://www.instagram.com/jelmpbshop/"><p><i class="fab fa-instagram"></i></p></a>
               <a href="#"><p><i class="fab fa-youtube"></i></p></a>
-              <a href="#"><p><i class="fab fa-twitter"></i></p></a>
             </p>
           </div>
         </div>
