--- a/products.html
+++ b/products.html
@@ -108,39 +108,39 @@
       <div class="col-1-of-4">
         <div>
           <div class="block-title">
-            <h3>Category</h3>
+            <h3>Catégorie</h3>
           </div>
 
           <ul class="block-content">
             <li>
               <input type="checkbox" name="" id="">
               <label for="">
-                <span>Shoes</span>
-                <small>(10)</small>
+                <span>Trousse</span>
+                <small>(20 en stock)</small>
               </label>
             </li>
 
             <li>
               <input type="checkbox" name="" id="">
               <label for="">
-                <span>Bags</span>
-                <small>(7)</small>
+                <span>Cache nez</span>
+                <small>(10 en stock)</small>
               </label>
             </li>
 
             <li>
               <input type="checkbox" name="" id="">
               <label for="">
-                <span> Accessories</span>
-                <small>(3)</small>
+                <span> Pavet</span>
+                <small>(23 en stock)</small>
               </label>
             </li>
 
             <li>
               <input type="checkbox" name="" id="">
               <label for="">
-                <span>Clothings</span>
-                <small>(3)</small>
+                <span>Salon liquide</span>
+                <small>(32 en stock)</small>
               </label>
             </li>
           </ul>
@@ -148,39 +148,39 @@
 
         <div>
           <div class="block-title">
-            <h3>Brands</h3>
+            <h3>Catégorie plus</h3>
           </div>
 
           <ul class="block-content">
             <li>
               <input type="checkbox" name="" id="">
               <label for="">
-                <span>Gucci</span>
-                <small>(10)</small>
+                <span>Oeuf Africain</span>
+                <small>(500 en stock)</small>
               </label>
             </li>
 
             <li>
               <input type="checkbox" name="" id="">
               <label for="">
-                <span>Burberry</span>
-                <small>(7)</small>
+                <span>moringa</span>
+                <small>(70 sachet en stock)</small>
               </label>
             </li>
 
             <li>
               <input type="checkbox" name="" id="">
               <label for="">
-                <span> Accessories</span>
-                <small>(3)</small>
+                <span>Arachide</span>
+                <small>(50 sachet en stock)</small>
               </label>
             </li>
 
             <li>
-              <input type="checkbox" name="" id="">
+              <input type="checkbox" name="Oignon" id="">
               <label for="">
-                <span>Valentino</span>
-                <small>(3)</small>
+                <span>Oignon en bouteille</span>
+                <small>(5 en stock)</small>
               </label>
             </li>
 
@@ -195,16 +195,16 @@
             <li>
               <input type="checkbox" name="" id="">
               <label for="">
-                <span>Hogan</span>
-                <small>(3)</small>
+                <span>Patate</span>
+                <small>(85 en stock)</small>
               </label>
             </li>
 
             <li>
               <input type="checkbox" name="" id="">
               <label for="">
-                <span>Moreschi</span>
-                <small>(3)</small>
+                <span>Maïs</span>
+                <small>(103 sachet en stock)</small>
               </label>
             </li>
 
