--- a/index.html
+++ b/index.html
@@ -443,7 +443,6 @@
               <a href="https://wa.me/+225-0787275329"><p><i class="fab fa-whatsapp"></i></i></p></a>
               <a href="https://www.instagram.com/jelmpbshop/"><p><i class="fab fa-instagram"></i></p></a>
               <a href="#"><p><i class="fab fa-youtube"></i></p></a>
-              <a href="#"><p><i class="fab fa-twitter"></i></p></a>
             </p>
           </div>
         </div>
@@ -464,13 +463,13 @@
         <div class="footer-center">
           <h3>CONTACTER-NOUS</h3>
           <div>
-            <a href="https://www.google.com/maps/place/Lyc%C3%A9e+Moderne+de+Port+Bouet/@5.2550168,-3.960339,17z/data=!3m1!4b1!4m5!3m4!1s0xfc1ef1d4375d901:0xbaaea4fef887409d!8m2!3d5.2550108!4d-3.9581466"><i class="fas fa-map-marker-alt " >-Lycée moderne de port bouet</i></a>
+            <a href="https://www.google.com/maps/place/Lyc%C3%A9e+Moderne+de+Port+Bouet/@5.2550168,-3.960339,17z/data=!3m1!4b1!4m5!3m4!1s0xfc1ef1d4375d901:0xbaaea4fef887409d!8m2!3d5.2550108!4d-3.9581466"><i class="fas fa-map-marker-alt " >-Adresse: jelmpb. Lycée Moderne de Port Bouet, Abidjan sud</i></a>
           </div>
           <div>
-            <a href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=default&ltmplcache=2&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin"><i class="far fa-envelope">-em@il: schoolphoenix225@gmail.com</i></a>
+            <a href="mailto:schoolphoenix225@gmail.com"><i class="far fa-envelope" >-Schoolphoenix225@gmail.com</i></a>
           </div>
           <div>
-            <a href="http://jelmpbschop.e-monsite.com/contact/contact.html"><i class="fas fa-phone">+225 0787275329</i></a>
+            <a href="tel:+225 0787275329"><i class="fas fa-phone">+225 0787275329</i></a>
           </div>
           <div class="payment-methods">
             <img src="./images/payment.png" alt="">
@@ -478,7 +477,28 @@
         </div>
       </div>
     </div>
-    <p>&copy;2021 jelmpb-shop</p>
+    <div class="col-lg-3 col-md-6 col-sm-12">
+      <div class="footer-section-three">
+        <div class="footer-heading"><h2>Entrer en contact</h2></div>
+         <div class="footer-form">
+           <form method="post" action="messageto:schoolphoenix225@gmail.com">
+             <div class="footer-form-box">
+               <input type="text" class="footer-form-style" placeholder="Name">
+             </div>
+             <div class="footer-form-box">
+               <input type="text" class="footer-form-style" placeholder="Email">
+             </div>
+             <div class="footer-form-box">
+               <input type="text" class="footer-form-style" placeholder="Phone Number">
+             </div>
+             <div class="footer-form-box">
+               <input type="submit" class="footer-form-submit-style" value="SUBMIT">
+             </div>
+           </form>
+         </div>
+      </div>
+    </div>
+    <p>&copy;Copyright 2021 JELMPB-Shop</p>
   </footer>
   <!-- End Footer -->
 
@@ -489,6 +509,7 @@
   <script src="./js/products.js"></script>
   <script src="./js/slider.js"></script>
   <script src="./js/index.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
