--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
   <script src="./js/products.js"></script>
   <script src="./js/slider.js"></script>
   <script src="./js/index.js"></script>
-  <script src="script.js"></script>
+  <script src="script.js">alert("Du au travaux en cour de l'operateur, La boutique peut rencontrer des problèmes au cour de votres visites... Veillez nous escusé d'avance!!!!!");</script>
 </body>
 
 </html>
