--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
           <label for="showdrop2" class="mobile-item">Page <span><i class="fas fa-chevron-down"></i></span></label>
           <ul class="drop-menu2">
             <li><a href="apropos et detailles.html">À propos</a></li>
-            <li><a href="http://jelmpbschop.e-monsite.com/contact/contact.html">Contact</a></li>
-            <li><a href="LICENSE">Faq</a></li>
+            <li><a href="tel:+225 0787275329">Contact</a></li>
+            <li><a href="#">Faq</a></li>
             <li><a href="page 404">Page 404</a></li>
           </ul>
         </li>
@@ -483,16 +483,16 @@
          <div class="footer-form">
            <form method="post" action="messageto:schoolphoenix225@gmail.com">
              <div class="footer-form-box">
-               <input type="text" class="footer-form-style" placeholder="Name">
+               <input type="text" class="footer-form-style" placeholder="Nome">
              </div>
              <div class="footer-form-box">
-               <input type="text" class="footer-form-style" placeholder="Email">
+               <input type="text" class="footer-form-style" placeholder="E-mail">
              </div>
              <div class="footer-form-box">
-               <input type="text" class="footer-form-style" placeholder="Phone Number">
+               <input type="text" class="footer-form-style" placeholder="Numéro de téléphone">
              </div>
              <div class="footer-form-box">
-               <input type="submit" class="footer-form-submit-style" value="SUBMIT">
+               <input type="submit" class="footer-form-submit-style" value="ENVOYER">
              </div>
            </form>
          </div>
