--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
          <div class="footer-form">
            <form method="post" action="messageto:schoolphoenix225@gmail.com">
              <div class="footer-form-box">
-               <input type="text" class="footer-form-style" placeholder="Nome">
+               <input type="text" class="footer-form-style" placeholder="Nom">
              </div>
              <div class="footer-form-box">
                <input type="text" class="footer-form-style" placeholder="E-mail">
