--- a/index.html
+++ b/index.html
@@ -491,6 +491,14 @@
              <div class="footer-form-box">
                <input type="text" class="footer-form-style" placeholder="Numéro de téléphone">
              </div>
+             <div class="input website">
+              <span class="wpcf7-form-control-wrap your-subject"><input type="text" name="your-subject" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Objet"></span>
+            </div>
+            <div class="message">
+              <span class="wpcf7-form-control-wrap your-message"><textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Message"></textarea></span>
+            </div>
+            <div class="wpcf7-response-output" aria-hidden="true"></div>
+            <p style="display: none !important"><span class="wpcf7-form-control-wrap referer-page"><input type="text" name="referer-page" value="http://Direct%20Visit" data-value="http://Direct%20Visit" size="40" class="wpcf7-form-control wpcf7-text referer-page" aria-invalid="false"></span></p>
              <div class="footer-form-box">
                <input type="submit" class="footer-form-submit-style" value="ENVOYER">
              </div>
