--- a/index.html
+++ b/index.html
@@ -437,6 +437,7 @@
           <a href="promation.html">Promotions</a>
           <a href="#">Plan du site</a>
           <p>Visible sur:</p>
+          
           <div class="social-média">
             <p>
               <a href="https://www.facebook.com/Jelmpbshop-OKTAY-100328895567186"><p><i class="fab fa-facebook-f"></i></p></a>
@@ -445,6 +446,7 @@
               <a href="#"><p><i class="fab fa-youtube"></i></p></a>
             </p>
           </div>
+          <p>&copy;Copyright 2021 JELMPB-Shop</p>
         </div>
         <div class="footer-center">
           <h3>INFORMATION</h3>
@@ -495,7 +497,7 @@
               <span class="wpcf7-form-control-wrap your-subject"><input type="text" name="your-subject" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Objet"></span>
             </div>
             <div class="message">
-              <span class="wpcf7-form-control-wrap your-message"><textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Message"></textarea></span>
+              <span class="wpcf7-form-control-wrap your-message"><textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="*Message"></textarea></span>
             </div>
             <div class="wpcf7-response-output" aria-hidden="true"></div>
             <p style="display: none !important"><span class="wpcf7-form-control-wrap referer-page"><input type="text" name="referer-page" value="http://Direct%20Visit" data-value="http://Direct%20Visit" size="40" class="wpcf7-form-control wpcf7-text referer-page" aria-invalid="false"></span></p>
@@ -506,7 +508,7 @@
          </div>
       </div>
     </div>
-    <p>&copy;Copyright 2021 JELMPB-Shop</p>
+    
   </footer>
   <!-- End Footer -->
 
