--- a/index.html
+++ b/index.html
@@ -446,7 +446,6 @@
               <a href="#"><p><i class="fab fa-youtube"></i></p></a>
             </p>
           </div>
-          <p>&copy;Copyright 2021 JELMPB-Shop</p>
         </div>
         <div class="footer-center">
           <h3>INFORMATION</h3>
@@ -477,38 +476,39 @@
             <img src="./images/payment.png" alt="">
           </div>
         </div>
+        <div class="footer-center">
+          <div class="col-lg-3 col-md-6 col-sm-12">
+            <div class="footer-section-three">
+              <div class="footer-heading"><h2>Entrer en contact</h2></div>
+               <div class="footer-form">
+                 <form method="post" action="messageto:schoolphoenix225@gmail.com">
+                   <div class="footer-form-box">
+                     <input type="text" class="footer-form-style" placeholder="Nom">
+                   </div>
+                   <div class="footer-form-box">
+                     <input type="text" class="footer-form-style" placeholder="E-mail">
+                   </div>
+                   <div class="footer-form-box">
+                     <input type="text" class="footer-form-style" placeholder="Numéro de téléphone">
+                   </div>
+                   <div class="input website">
+                    <span class="wpcf7-form-control-wrap your-subject"><input type="text" name="your-subject" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Objet"></span>
+                  </div>
+                  <div class="message">
+                    <span class="wpcf7-form-control-wrap your-message"><textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="*Message"></textarea></span>
+                  </div>
+                  <div class="wpcf7-response-output" aria-hidden="true"></div>
+                  <p style="display: none !important"><span class="wpcf7-form-control-wrap referer-page"><input type="text" name="referer-page" value="http://Direct%20Visit" data-value="http://Direct%20Visit" size="40" class="wpcf7-form-control wpcf7-text referer-page" aria-invalid="false"></span></p>
+                   <div class="footer-form-box">
+                     <input type="submit" class="footer-form-submit-style" value="ENVOYER">
+                   </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="col-lg-3 col-md-6 col-sm-12">
-      <div class="footer-section-three">
-        <div class="footer-heading"><h2>Entrer en contact</h2></div>
-         <div class="footer-form">
-           <form method="post" action="messageto:schoolphoenix225@gmail.com">
-             <div class="footer-form-box">
-               <input type="text" class="footer-form-style" placeholder="Nom">
-             </div>
-             <div class="footer-form-box">
-               <input type="text" class="footer-form-style" placeholder="E-mail">
-             </div>
-             <div class="footer-form-box">
-               <input type="text" class="footer-form-style" placeholder="Numéro de téléphone">
-             </div>
-             <div class="input website">
-              <span class="wpcf7-form-control-wrap your-subject"><input type="text" name="your-subject" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Objet"></span>
-            </div>
-            <div class="message">
-              <span class="wpcf7-form-control-wrap your-message"><textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="*Message"></textarea></span>
-            </div>
-            <div class="wpcf7-response-output" aria-hidden="true"></div>
-            <p style="display: none !important"><span class="wpcf7-form-control-wrap referer-page"><input type="text" name="referer-page" value="http://Direct%20Visit" data-value="http://Direct%20Visit" size="40" class="wpcf7-form-control wpcf7-text referer-page" aria-invalid="false"></span></p>
-             <div class="footer-form-box">
-               <input type="submit" class="footer-form-submit-style" value="ENVOYER">
-             </div>
-           </form>
-         </div>
-      </div>
-    </div>
-    
   </footer>
   <!-- End Footer -->
 
