--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="mega-box">
             <div class="content">
               <div class="row">
-                <img src="./images/eleve devant ordi.png" alt="" />
+                <img src="./images/" alt="" />
               </div>
               <div class="row">
                 <header>Aménagement de la boutique</header>
@@ -105,12 +105,13 @@
 
   <div class="hero">
     <div class="left">
-      <span>Ventes exclusives <a href="products.html">Voir la collection</a></span>
+      <span>Ventes exclusives 
       <h1> BIENVENUE !<br>DANS VOTRE BOUTIQUE,<br>VOTRE CHEZ VOUS</h1>
       <small>Recevez toutes les offres exclusives de la saison</small>
+      <a href="products.html">Voir la collection</a></span>
     </div>
     <div class="right">
-      <img src="./images/eleve devant ordi.png" alt="" />
+      <img src="./images/" alt="" />
     </div>
     
   </div>
@@ -506,6 +507,9 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="footer-center">
+          <p>&copy;Copyright JELMPB-Shop</p>
         </div>
       </div>
     </div>
