--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="mega-box">
             <div class="content">
               <div class="row">
-                <img src="./images/" alt="" />
+                <img src="./images/eleve devant ordi.png" alt="" />
               </div>
               <div class="row">
                 <header>Aménagement de la boutique</header>
@@ -70,12 +70,12 @@
         </li>
         <li><a href="http://jelmpbschop.e-monsite.com/blog/">Blog</a></li>
         <li>
-          <a href="#" class="desktop-item">fournisseurs <span><i class="fas fa-chevron-down"></i></span></a>
+          <a href="#" class="desktop-item">Vos avis <span><i class="fas fa-chevron-down"></i></span></a>
           <input type="checkbox" id="showdrop1" />
-          <label for="showdrop1" class="mobile-item">fournisseurs <span><i class="fas fa-chevron-down"></i></span></label>
+          <label for="showdrop1" class="mobile-item">Vos avis <span><i class="fas fa-chevron-down"></i></span></label>
           <ul class="drop-menu1">
-            <li><a href="#">Listes des magasins des fournisseurs</a></li>
-            <li><a href="apropos et detailles.html">Détails du magasin</a></li>
+            <li><a href="#">Commenter</a></li>
+            <li><a href="apropos et detailles.html">Noter</a></li>
           </ul>
         </li>
 
